--- a/On the prediction of landslide occurrences and sizes via Hierarchical Neural Networks.ipynb
+++ b/On the prediction of landslide occurrences and sizes via Hierarchical Neural Networks.ipynb
@@ -98,6 +98,16 @@
     "    return model\n",
     "\n",
     "\n",
+    "def compile_model(model, parameters, bin_weight, cla_weight):\n",
+    "    if optimal_parameters[-1] == 'adam':\n",
+    "        opt = 'adam'\n",
+    "    else:\n",
+    "        opt = tf.keras.optimizers.Adam(learning_rate = optimal_parameters[-1])\n",
+    "        \n",
+    "    model.compile(loss=[\"binary_crossentropy\", \"categorical_crossentropy\"], \n",
+    "              optimizer=opt, loss_weights=[bin_weight, cla_weight])\n",
+    "\n",
+    "\n",
     "# Generate a random configuration of hyperparameters from the search space\n",
     "def generate_configuration(first_stage_hl, second_stage_hl, first_stage_n, second_stage_n, \n",
     "                           dropout_rate, l2, learning_rate):\n",
@@ -112,8 +122,6 @@
     "    configuration = [19, c1, c2, c3, c4, c5, c6, c7] # 19 is the number of explanatory variables\n",
     "    return configuration\n",
     "\n",
-    "# build_multi_output_model(input_size, stage_1_hidden_layers, stage_2_hidden_layers, \n",
-    "#                             stage_1_neurons, stage_2_neurons, dropout_rate, l2):\n",
     "\n",
     "# MC tuning process\n",
     "def monte_carlo_tuning(x_train, y_train_1, y_train_2,\n",
@@ -319,8 +327,7 @@
     "                   )\n",
     "        \n",
     "        y_pred = model.predict(x_test)\n",
-    "        count_predictions = y_pred[0]\n",
-    "        area_predictions = y_pred[1]\n",
+    "        count_predictions, area_predictions = y_pred[0], y_pred[1]\n",
     "        \n",
     "        c_auc = roc_auc_score(y_test_count, count_predictions)\n",
     "        \n",
@@ -343,7 +350,7 @@
     "            weight_ratio.append(wr)\n",
     "        weight_1 += ratio_increase\n",
     "        weight_2 = 10-weight_1\n",
-    "    return count_roc, class_ovr_w_roc #, model_histories"
+    "    return count_roc, class_ovr_w_roc"
    ]
   },
   {
@@ -655,13 +662,7 @@
     "# Define model and checkpoints\n",
     "binary_model = build_multi_output_model(*optimal_parameters[:-1])\n",
     "\n",
-    "if optimal_parameters[-1] == 'adam':\n",
-    "    opt = 'adam'\n",
-    "else:\n",
-    "    opt = tf.keras.optimizers.Adam(learning_rate = optimal_parameters[-1])\n",
-    "\n",
-    "binary_model.compile(loss=[\"binary_crossentropy\", \"categorical_crossentropy\"], \n",
-    "              optimizer=opt, loss_weights=[10, 0])\n",
+    "compile_model(binary_model, optimal_parameters, 10, 0)\n",
     "\n",
     "binary_checkpoint = ModelCheckpoint(\"Binary_Checkpoint\", monitor='val_loss', verbose=1,\n",
     "    save_best_only=True, mode='min', save_freq='epoch')\n",
@@ -686,8 +687,7 @@
     "\n",
     "# Make predictions\n",
     "binary_y_pred=best_binary_model.predict(x_test)\n",
-    "binary_count_predictions = binary_y_pred[0]\n",
-    "binary_area_predictions = binary_y_pred[1]\n",
+    "binary_count_predictions, binary_area_predictions = binary_y_pred[0], binary_y_pred[1]\n",
     "\n",
     "binary_auc = roc_auc_score(y_test_count, binary_count_predictions)\n",
     "baseline_auc = roc_auc_score(y_test_count, baseline_pred)\n",
@@ -699,7 +699,6 @@
     "ns1, ns2, _ = roc_curve(y_test_count, ns_probs)\n",
     "nn1, nn2, _ = roc_curve(y_test_count, binary_count_predictions)\n",
     "bl1, bl2, _ = roc_curve(y_test_count, baseline_pred)\n",
-    "# bl1, bl2, _ = roc_curve(y_test_count, p_pred)\n",
     "plt.plot(ns1, ns2, linestyle='--', label='No Skill')\n",
     "plt.plot(nn1, nn2, marker='.', color='blue',label='ROC curve for Binary Model ('+'%.5f' % (binary_auc)+')')\n",
     "plt.plot(bl1, bl2, marker='.', color='red', label='ROC curve for Baseline Model ('+'%.5f' % (baseline_auc)+')')\n",
@@ -744,13 +743,7 @@
     "# Define model and checkpoints\n",
     "class_model  = build_multi_output_model(*optimal_parameters[:-1])\n",
     "\n",
-    "if optimal_parameters[-1] == 'adam':\n",
-    "    opt = 'adam'\n",
-    "else:\n",
-    "    opt = tf.keras.optimizers.Adam(learning_rate = optimal_parameters[-1]) \n",
-    "    \n",
-    "class_model.compile(loss=[\"binary_crossentropy\", \"categorical_crossentropy\"], \n",
-    "              optimizer=opt, loss_weights=[8, 2])\n",
+    "compile_model(class_model, optimal_parameters, 8, 2)\n",
     "\n",
     "class_checkpoint = ModelCheckpoint(\"Class_Checkpoint\", monitor='val_loss', verbose=1,\n",
     "    save_best_only=True, mode='min', save_freq='epoch')\n",
@@ -775,8 +768,7 @@
     "\n",
     "# Make predictions\n",
     "class_y_pred=best_class_model.predict(x_test)\n",
-    "class_count_predictions = class_y_pred[0]\n",
-    "class_area_predictions = class_y_pred[1]\n",
+    "class_count_predictions, class_area_predictions = class_y_pred[0], class_y_pred[1]\n",
     "\n",
     "# Test Predictions\n",
     "macro_roc_auc_ovo = roc_auc_score(y_test_area, class_area_predictions, multi_class=\"ovo\",\n",
@@ -860,7 +852,6 @@
     "    #training\n",
     "    encoder.fit(y_train_area)\n",
     "    encoded_Y = encoder.transform(y_train_area)\n",
-    "    # convert integers to dummy variables (i.e. one hot encoded)\n",
     "    y_train = np_utils.to_categorical(encoded_Y)\n",
     "\n",
     "    #testing\n",
@@ -927,8 +918,8 @@
     "        ab_x_train, ab_x_test, ab_y_train, ab_y_test_area, ab_y_train_count, ab_y_test_count = remove_variable(data, *j)\n",
     "        \n",
     "        ab_class_model = build_multi_output_model(ab_x_train.shape[1],*optimal_parameters[1:-1])\n",
-    "        ab_class_model.compile(loss=[\"binary_crossentropy\", \"categorical_crossentropy\"], \n",
-    "                  optimizer='adam', loss_weights=[8, 2])\n",
+    "        \n",
+    "        compile_model(ab_class_model, optimal_parameters, 8, 2)\n",
     "\n",
     "        ab_class_history = ab_class_model.fit(ab_x_train, [ab_y_train_count, ab_y_train], \n",
     "                            epochs=30,\n",
@@ -966,6 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Rename variables for more clear understanding of the following cell\n",
     "area    = ablation_results[0][1:]\n",
     "dist    = ablation_results[1][1:]\n",
     "slope   = ablation_results[2][1:]\n",
@@ -1066,14 +1058,16 @@
    "outputs": [],
    "source": [
     "bin_ablation_results = []\n",
+    "\n",
     "for i in tqdm(remove_com):\n",
     "    vals = []\n",
     "    for itr in range(10):\n",
     "        ab_x_train, ab_x_test, ab_y_train, ab_y_test_area, ab_y_train_count, ab_y_test_count = remove_variable(data, *i)\n",
     "\n",
     "        ab_binary_model = build_multi_output_model(ab_x_train.shape[1],*optimal_parameters[1:-1])\n",
-    "        ab_binary_model.compile(loss=[\"binary_crossentropy\", \"categorical_crossentropy\"], \n",
-    "                  optimizer='adam', loss_weights=[10, 0])\n",
+    "        \n",
+    "        compile_model(ab_binary_model, optimal_parameters, 10, 0)\n",
+    "        \n",
     "        bin_history = ab_binary_model.fit(ab_x_train, [ab_y_train_count, ab_y_train], \n",
     "                            epochs=30,\n",
     "                            verbose = 0,\n",
